[package]
name = "block-guardian-verifier"
version = "0.1.0"
description = "A Solana smart contract for storing merkle tree roots and file hashes on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "block_guardian_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
